[package]
name = "metac"
version = "0.1.1"
authors = ["Kevin Robert Stravers <macocio@gmail.com>"]
edition = "2018"
description = "Parser for a lisp/bash-like language"
license = "LGPL-3.0-or-later"
keywords = ["language", "parser", "interpreter"]
homepage = "https://docs.rs/metac"
repository = "https://github.com/Omen-of-Aecio/metac"

[lib]
name = "metac"
path = "lib.rs"

[dependencies]
smallvec = "1.2.0"

[dev-dependencies]
criterion = "0.3.1"

[[bench]]
name = "basic"
harness = false
